LPS-71164 prep next, use latest