@@ -32,8 +32,9 @@ public class PrimitiveWrapperInstantiationCheck extends BaseFileCheck {
 		return StringUtil.replace(
 			content,
 			new String[] {
-				"new Boolean(", "new Byte(", "new Character(", "new Double(",
-				"new Float(", "new Integer(", "new Long(", "new Short("
+				"Boolean.valueOf(", "Byte.valueOf(", "Character.valueOf(",
+				"Double.valueOf(",
+				"Float.valueOf(", "Integer.valueOf(", "Long.valueOf(", "Short.valueOf("
 			},
 			new String[] {
 				"Boolean.valueOf(", "Byte.valueOf(", "Character.valueOf(",
